feat: update task table

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,2 +1,8 @@
 <div id="<%= dom_id task %>">
 </div>
+
+<div>
+    <p><%= task.name %></p>
+    <p><%= task.starts_at %></p>
+    <p><%= task.ends_at %></p>
+</div>
