style: erblint --lint-all -a (adjust index.html.erb)

--- a/app/views/measure/index.html.erb
+++ b/app/views/measure/index.html.erb
@@ -1,7 +1,7 @@
 <div>
-  <% # dynamic measure time %>
+  <% "dynamic measure time" %>
 
-  <% # list of task %>
+  <% "list of task" %>
   <% @tasks.each do |task| %>
     <div class: "flex">
       <%= task.name %>
