feat: implement timer (WIP)

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id task %>">
 </div>
 
-<div>
+<div class="my-5">
     <p><%= task.name %></p>
     <p><%= task.starts_at %></p>
     <p><%= task.ends_at %></p>
