--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: task, class: "contents") do |form| %>
+<%= form_with(model: task, class: "contents", data: { "time-target": "form", "controller": "time"  }) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,22 +11,30 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
+  <div class="flex justify-center">
+    <div class="my-5 mx-5 flex justify-center">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
 
-  <div class="my-5">
-    <%= form.label :starts_at %>
-    <%= form.time_field :starts_at, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
+    <div class="my-5 mx-5 flex justify-center">
+      <%= form.label :starts_at %>
+      <%= form.time_field :starts_at, data: { "time-target": "startsAt" }, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
 
-  <div class="my-5">
-    <%= form.label :ends_at %>
-    <%= form.time_field :ends_at, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
+    <div class="my-5 mx-5 flex justify-center">
+      <%= form.label :ends_at %>
+      <%= form.time_field :ends_at, data: { "time-target": "endsAt" }, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    </div>
 
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <div class="my-5 mx-5">
+      <button data-action="click->time#click" data-time-target="icon" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="button">
+      ▶
+      </button>
+    </div>
+
+    <div class="my-5 mx-5">
+      <p data-time-target="time">--:--</p>
+    </div>
   </div>
 <% end %>
